Fixed home page styling on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -190,7 +190,7 @@ a:hover {
     font-size: 1.2rem;
   }
   .main-content .intro > p {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
   .sidebar {
     width: 100%;
